# module-6-apop01100

./: .gitignore  README.md  conftest.py  dockerfile  main.py  pyproject.toml  pytest.ini
core/: __init__.py  db.py
core/DAL/: animals_dal.py  employees_dal.py
core/config/: setting.py
core/constant/api_docs/animal/: add_animal.yml  delete_animal_by_id.yml  get_animal_by_id.yml  get_animals.yml  update_animal_by_id.yml
core/constant/api_docs/employee/: add_employee.yml  delete_employee_by_id.yml  get_employee_by_id.yml  get_employees.yml  update_employee_by_id.yml
core/constant/messages/: __init__.py
core/controllers/: animals_controller.py  employees_controller.py
core/models/: animal.py  employee.py
core/routes/: animal.py  api.py  employee.py
migrations/versions/: 016e99cd8278_.py  029fd33e94e8_.py  5e193ae938c6_.py
test/: test_animal_api.py  test_employee_api.py
